homework5/NOTE
Pulling https://github.com/tatia2501/IS-2020-prog-2-sem/homework5
Pull finished
main.cpp: In function 'int main()':
main.cpp:203:32: error: no matching function for call to 'CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(int)'
  203 |     CircularBuffer<string> cs(4);
      |                                ^
In file included from main.cpp:10:
CircularBuffer.hpp:107:14: note: candidate: 'CircularBuffer<T>::CircularBuffer(T) [with T = std::__cxx11::basic_string<char>]'
  107 |     explicit CircularBuffer(T num) {
      |              ^~~~~~~~~~~~~~
CircularBuffer.hpp:107:31: note:   no known conversion for argument 1 from 'int' to 'std::__cxx11::basic_string<char>'
  107 |     explicit CircularBuffer(T num) {
      |                             ~~^~~
CircularBuffer.hpp:9:7: note: candidate: 'constexpr CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(const CircularBuffer<std::__cxx11::basic_string<char> >&)'
    9 | class CircularBuffer {
      |       ^~~~~~~~~~~~~~
CircularBuffer.hpp:9:7: note:   no known conversion for argument 1 from 'int' to 'const CircularBuffer<std::__cxx11::basic_string<char> >&'
CircularBuffer.hpp:9:7: note: candidate: 'constexpr CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(CircularBuffer<std::__cxx11::basic_string<char> >&&)'
CircularBuffer.hpp:9:7: note:   no known conversion for argument 1 from 'int' to 'CircularBuffer<std::__cxx11::basic_string<char> >&&'
make: *** [makefile:2: all] Error 1



